--- a/FrontendMonitoring/Components/Pages/Home.razor
+++ b/FrontendMonitoring/Components/Pages/Home.razor
@@ -23,9 +23,9 @@
     }
     else
     {
-        <MudText Typo="Typo.h4" GutterBottom="true">Welkom bij jouw MudBlazor App!</MudText>
+        <MudText Typo="Typo.h4" GutterBottom="true">Welkom bij jouw Bit by bit App!</MudText>
         <MudText Typo="Typo.body1" Class="mb-6">
-            Deze applicatie maakt gebruik van MudBlazor voor een moderne en responsive gebruikerservaring.
+            Welkom bij Bit by bit webapp. In deze app kun je je gegevens beheren en bekijken. Om toegang te krijgen tot je dashboard, moet je ingelogd zijn.
             Log in of maak een account aan om verder te gaan.
         </MudText>
 
